@@ -64,69 +64,69 @@ AC_DEFINE_UNQUOTED(CONFIG_MANDIR, ["$ac_mandir"], [Default man page path.])
 
 # Enable debugging argument option.
 AC_ARG_ENABLE(debug,
-  AC_HELP_STRING([--enable-debug], [enable debugging (default=no)]),
+  AS_HELP_STRING([--enable-debug], [enable debugging (default=no)]),
   [ac_debug="$enableval"])
 
 # Enable JACK standalone build.
 AC_ARG_ENABLE(jack,
-  AC_HELP_STRING([--enable-jack], [enable JACK stand-alone build (default=yes)]),
+  AS_HELP_STRING([--enable-jack], [enable JACK stand-alone build (default=yes)]),
   [ac_jack="$enableval"],
   [ac_jack="yes"])
 
 # Enable JACK session support.
 AC_ARG_ENABLE(jack-session,
-  AC_HELP_STRING([--enable-jack-session], [enable JACK session support (default=yes)]),
+  AS_HELP_STRING([--enable-jack-session], [enable JACK session support (default=yes)]),
   [ac_jack_session="$enableval"],
   [ac_jack_session="yes"])
 
 # Enable JACK MIDI support option.
 AC_ARG_ENABLE(jack-midi,
-  AC_HELP_STRING([--enable-jack-midi], [enable JACK MIDI support (default=yes)]),
+  AS_HELP_STRING([--enable-jack-midi], [enable JACK MIDI support (default=yes)]),
   [ac_jack_midi="$enableval"],
   [ac_jack_midi="yes"])
 
 # Enable ALSA MIDI support option.
 AC_ARG_ENABLE(alsa-midi,
-  AC_HELP_STRING([--enable-alsa-midi], [enable ALSA MIDI support (default=yes)]),
+  AS_HELP_STRING([--enable-alsa-midi], [enable ALSA MIDI support (default=yes)]),
   [ac_alsa_midi="$enableval"],
   [ac_alsa_midi="yes"])
 
 # Enable LV2 plugin build.
 AC_ARG_ENABLE(lv2,
-  AC_HELP_STRING([--enable-lv2], [enable LV2 plug-in build (default=yes)]),
+  AS_HELP_STRING([--enable-lv2], [enable LV2 plug-in build (default=yes)]),
   [ac_lv2="$enableval"],
   [ac_lv2="yes"])
 
 AC_ARG_ENABLE(lv2-external-ui,
-  AC_HELP_STRING([--enable-lv2-external-ui], [enable LV2 plug-in External UI support (default=yes)]),
+  AS_HELP_STRING([--enable-lv2-external-ui], [enable LV2 plug-in External UI support (default=yes)]),
   [ac_lv2_external_ui="$enableval"],
   [ac_lv2_external_ui="yes"])
 
 AC_ARG_ENABLE(lv2-ui-idle,
-  AC_HELP_STRING([--enable-lv2-ui-idle], [enable LV2 UI Idle interface support (default=yes)]),
+  AS_HELP_STRING([--enable-lv2-ui-idle], [enable LV2 UI Idle interface support (default=yes)]),
   [ac_lv2_ui_idle="$enableval"],
   [ac_lv2_ui_idle="yes"])
 
 AC_ARG_ENABLE(lv2-ui-show,
-  AC_HELP_STRING([--enable-lv2-ui-show], [enable LV2 UI Show interface support (default=yes)]),
+  AS_HELP_STRING([--enable-lv2-ui-show], [enable LV2 UI Show interface support (default=yes)]),
   [ac_lv2_ui_show="$enableval"],
   [ac_lv2_ui_show="yes"])
 
 AC_ARG_ENABLE(lv2-programs,
-  AC_HELP_STRING([--enable-lv2-programs], [enable LV2 plug-in Programs support (default=yes)]),
+  AS_HELP_STRING([--enable-lv2-programs], [enable LV2 plug-in Programs support (default=yes)]),
   [ac_lv2_programs="$enableval"],
   [ac_lv2_programs="yes"])
 
 
 # Enable liblo availability.
 AC_ARG_ENABLE(liblo,
-  AC_HELP_STRING([--enable-liblo], [enable liblo interface (default=yes)]),
+  AS_HELP_STRING([--enable-liblo], [enable liblo interface (default=yes)]),
   [ac_liblo="$enableval"],
   [ac_liblo="yes"])
 
 # Enable NSM support.
 AC_ARG_ENABLE(nsm,
-  AC_HELP_STRING([--enable-nsm], [enable NSM support (default=yes)]),
+  AS_HELP_STRING([--enable-nsm], [enable NSM support (default=yes)]),
   [ac_nsm="$enableval"],
   [ac_nsm="yes"])
 
@@ -143,51 +143,60 @@ AC_SUBST(ac_debug)
 
 # Enable Qt4/5 availability.
 AC_ARG_ENABLE(qt4,
-  AC_HELP_STRING([--enable-qt4], [enable Qt4 build (default=no)]),
+  AS_HELP_STRING([--enable-qt4], [enable Qt4 build (default=no)]),
   [ac_qt4="$enableval"],
   [ac_qt4="no"])
 
 
 # Standard installation base dirs.
+ac_path=$PATH
 ac_with_paths=""
 
 # Set for alternate Qt4/5 installation dir.
+AC_ARG_WITH(qt,
+  AS_HELP_STRING([--with-qt=PATH], [use alternate Qt install path]),
+  [ac_qt_path="$withval"], [ac_qt_path="no"])
+
 AC_ARG_WITH(qt4,
-  AC_HELP_STRING([--with-qt4=PATH], [use alternate Qt4 install path]),
+  AS_HELP_STRING([--with-qt4=PATH], [use alternate Qt4 install path]),
   [ac_qt4_path="$withval"], [ac_qt4_path="no"])
 
 AC_ARG_WITH(qt5,
-  AC_HELP_STRING([--with-qt5=PATH], [use alternate Qt5 install path]),
+  AS_HELP_STRING([--with-qt5=PATH], [use alternate Qt5 install path]),
   [ac_qt5_path="$withval"], [ac_qt5_path="no"])
 
+if test "x$ac_qt_path" != "xno"; then
+   ac_path="$ac_qt_path/bin:$ac_path"
+fi
+
 if test "x$ac_qt4_path" != "xno"; then
-   ac_with_paths="$ac_with_paths $ac_qt4_path"
+   ac_path="$ac_qt4_path/bin:$ac_path"
    ac_qt4="yes"
 fi
 
 if test "x$ac_qt5_path" != "xno"; then
-   ac_with_paths="$ac_with_paths $ac_qt5_path"
+   ac_path="$ac_qt5_path/bin:$ac_path"
    ac_qt4="no"
 fi
 
 # Set for alternate ALSA installation dir.
 AC_ARG_WITH(alsa,
-  AC_HELP_STRING([--with-alsa=PATH], [use alternate ALSA install path]),
+  AS_HELP_STRING([--with-alsa=PATH], [use alternate ALSA install path]),
   [ac_with_paths="$ac_with_paths $withval"])
 
 # Set for alternate JACK installation dir.
 AC_ARG_WITH(jack,
-  AC_HELP_STRING([--with-jack=PATH], [use alternate JACK install path]),
+  AS_HELP_STRING([--with-jack=PATH], [use alternate JACK install path]),
   [ac_with_paths="$ac_with_paths $withval"])
 
 # Set for alternate LV2 installation dir.
 AC_ARG_WITH(lv2,
-  AC_HELP_STRING([--with-lv2=PATH], [use alternate LV2 install path]),
+  AS_HELP_STRING([--with-lv2=PATH], [use alternate LV2 install path]),
   [ac_with_paths="$ac_with_paths $withval"])
 
 # Set for alternate liblo installation dir.
 AC_ARG_WITH(liblo,
-  AC_HELP_STRING([--with-liblo=PATH], [use alternate liblo path]),
+  AS_HELP_STRING([--with-liblo=PATH], [use alternate liblo path]),
   [ac_with_paths="$ac_with_paths $withval"])
 
 
@@ -200,9 +209,6 @@ ac_ldflags=$LDFLAGS
 AC_PROG_CPP
 AC_PROG_CXX
 AC_PROG_CXXCPP
-
-# Checks for languages.
-AC_LANG_CPLUSPLUS
 
 # Check for pkg-config.
 PKG_PROG_PKG_CONFIG
@@ -230,12 +236,7 @@ if test "x$ac_arch" = "xx86_64"; then
    ac_libdirs="$ac_libdirs lib64"
 fi
 
-CFLAGS="-fPIC $CFLAGS"
-CPPFLAGS="-fPIC $CPPFLAGS"
-
 # Prepend alternate dependencies paths.
-ac_path=$PATH
-
 for X in $ac_with_paths; do
   if test -d $X/bin; then
     ac_path="$X/bin:$ac_path"
@@ -247,8 +248,8 @@ for X in $ac_with_paths; do
   fi
   for Y in $ac_libdirs; do
     if test -d $X/$Y; then
-       LIBS="-L$X/$Y $LIBS"
-       ac_libs="-L$X/$Y $ac_libs"
+      LIBS="-L$X/$Y $LIBS"
+      ac_libs="-L$X/$Y $ac_libs"
     fi
   done
 done
@@ -257,12 +258,12 @@ done
 ac_errmsg="not found in current PATH. Maybe QT development environment isn't available."
 
 if test "x$ac_qt4" = "xyes"; then
-   AC_PATH_PROG(ac_qmake, qmake-qt4, [no], $ac_path)
+   AC_PATH_TOOL(ac_qmake, qmake-qt4, [no], $ac_path)
 else
-   AC_PATH_PROG(ac_qmake, qmake-qt5, [no], $ac_path)
+   AC_PATH_TOOL(ac_qmake, qmake-qt5, [no], $ac_path)
 fi
 if test "x$ac_qmake" = "xno"; then
-   AC_PATH_PROG(ac_cv_qmake, qmake, [no], $ac_path)
+   AC_PATH_TOOL(ac_cv_qmake, qmake, [no], $ac_path)
    ac_qmake=$ac_cv_qmake
 fi
 if test "x$ac_qmake" = "xno"; then
@@ -295,7 +296,7 @@ if test -d $ac_qt_install_path; then
 fi
 
 # Check it again, now with updated PATH, just in case...
-AC_PATH_PROG(ac_cv_qmake, qmake, [no], $ac_path)
+AC_PATH_TOOL(ac_cv_qmake, qmake, [no], $ac_path)
 ac_qmake=$ac_cv_qmake
 if test "x$ac_qmake" = "xno"; then
    AC_MSG_ERROR([qmake $ac_errmsg])
@@ -350,28 +351,28 @@ else
 fi
 
 # Check for Qt moc utility.
-AC_PATH_PROG(ac_moc, moc, [no], $ac_path)
+AC_PATH_TOOL(ac_moc, moc, [no], $ac_path)
 if test "x$ac_moc" = "xno"; then
    AC_MSG_ERROR([moc $ac_errmsg])
 fi
 AC_SUBST(ac_moc)
 
 # Check for Qt uic utility.
-AC_PATH_PROG(ac_uic, uic, [no], $ac_path)
+AC_PATH_TOOL(ac_uic, uic, [no], $ac_path)
 if test "x$ac_uic" = "xno"; then
    AC_MSG_ERROR([uic $ac_errmsg])
 fi
 AC_SUBST(ac_uic)
 
 # Check for Qt lupdate utility.
-AC_PATH_PROG(ac_lupdate, lupdate, [no], $ac_path)
+AC_PATH_TOOL(ac_lupdate, lupdate, [no], $ac_path)
 if test "x$ac_lupdate" = "xno"; then
    AC_MSG_ERROR([lupdate $ac_errmsg])
 fi
 AC_SUBST(ac_lupdate)
 
 # Check for Qt lrelease utility.
-AC_PATH_PROG(ac_lrelease, lrelease, [no], $ac_path)
+AC_PATH_TOOL(ac_lrelease, lrelease, [no], $ac_path)
 if test "x$ac_release" = "xno"; then
    AC_MSG_ERROR([lrelease $ac_errmsg])
 fi
